fixed horizontal scrolling city

--- a/src/styles/desk-lg.scss
+++ b/src/styles/desk-lg.scss
@@ -9,7 +9,9 @@
         font-size: 1rem;
         padding-left: 10px;
     }
-  
+    #holder {
+        width: 768px;
+    }
 
     .header-logo{
         width:  120px;
