--- a/src/styles/mobile-sm.scss
+++ b/src/styles/mobile-sm.scss
@@ -4,7 +4,9 @@
     html {
         font-size: .8rem;
     }
-   
+    #holder {
+        width: 400px;
+    }
     .navbar-brand {
         display: none;
     }
