--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -4,7 +4,9 @@
     html {
         font-size: .7rem;
     }
-  
+    #holder {
+        width: 576px;
+    }
     .navbar-brand {
         display: block;
         font-size: 1.2rem;
